[project]
name = "cargo"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>",
           "Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]

[lib]
name = "cargo"
path = "src/cargo/lib.rs"

[dependencies]
toml = "0.1.20"
semver = "0.1.18"
curl = "0.2.7"
tar = "0.2.9"
flate2 = "0.2.6"
git2 = "0.2.8"
git2-curl = "0.2.3"
glob = "0.2.9"
time = "0.1.24"
log = "0.3.1"
env_logger = "0.3.0"
docopt = "0.6.57"
url = "0.2.29"
rustc-serialize = "0.3.12"
term = "0.2.6"
regex = "0.1.26"
threadpool = "0.1.3"
libc = "0.1.5"
registry = { path = "src/registry" }
num_cpus = "0.1"

[target.i686-pc-windows-gnu]
dependencies = { winapi = "0.1", advapi32-sys = "0.1", kernel32-sys = "0.1" }
[target.x86_64-pc-windows-gnu]
dependencies = { winapi = "0.1", advapi32-sys = "0.1", kernel32-sys = "0.1" }

[dev-dependencies]
tempdir = "0.3"
hamcrest = { git = "https://github.com/carllerche/hamcrest-rust.git" }

[[bin]]
name = "cargo"
test = false
doc = false

[[test]]
name = "tests"

[[test]]
name = "resolve"
